--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: required
 dist: trusty
 language: node_js
 node_js:
@@ -13,9 +13,9 @@ addons:
       # nodejs >v4 compiler requirements
       - g++-4.8
 before_install:
-  - apt-get -y install python3-pip python-dev
-  - pip3 install -U setuptools
-  - pip3 install -U virtualenvwrapper
+  - sudo apt-get -y install python3-pip python-dev
+  - sudo pip3 install -U setuptools
+  - sudo pip3 install -U virtualenvwrapper
   - python3 -V
   - pip3 -V
 install:
